# Beast

./: .gitignore  README.md  REVIEW.md  pyproject.toml  requirements.txt  topics.example.json
beast/: __init__.py  __main__.py  cli.py  config.py  diff.py  effects.py  logging_setup.py  meta.py  pairwise70_repo.py  report.py  scheduler.py  snapshot.py  store.py  tracker.py  updater.py
beast/ingest/: __init__.py  base.py  cochrane.py
beast/sources/: __init__.py  base.py  europepmc.py  pairwise70.py  rct_extractor.py
tests/: conftest.py  test_effects.py  test_ingest_cochrane.py  test_meta.py  test_pairwise70_repo.py  test_rct_extractor.py  test_scheduler_report_cli.py  test_snapshot_diff.py  test_sources.py  test_store.py  test_tracker.py  test_updater.py
tests/fixtures/: metafor_gold.json  sample_pairwise70.csv
